# ClinCore

./: README.md  pyproject.toml
src/ClinCore/: adam.py  cli.py  config.py  fetcher.py  metadata.py  pipeline.py  reporting.py  sdtm.py  validation.py
